--- a/android/local.properties
+++ b/android/local.properties
@@ -1,4 +1,5 @@
-sdk.dir=/Users/hunghd/Library/Android/sdk
-flutter.sdk=/Users/hunghd/Documents/Workspace/flutter
+sdk.dir=C:\\Users\\hunghd\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\Users\\hunghd\\Documents\\Workspace\\flutter
 flutter.versionName=1.0.0
 flutter.versionCode=1
+flutter.buildMode=debug
